--- a/university-client/src/pages/FromTable.module.css
+++ b/university-client/src/pages/FromTable.module.css
@@ -1,6 +1,6 @@
 .container {
-    max-width: 600px;
-    margin: 40px auto;
+    /* max-width: 600px; */
+    /* margin: 40px auto; */
     padding: 24px;
     background: #f9f9f9;
     border-radius: 12px;
@@ -45,10 +45,11 @@
 }
 
 .th {
+
     background: #3498db;
     color: #fff;
     padding: 10px;
-    text-align: left;
+    text-align: center;
 }
 
 .td {
@@ -59,6 +60,16 @@
 
 .deleteBtn {
     background: #e74c3c;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+    padding: 6px 12px;
+    cursor: pointer;
+    margin-left: 8px;
+}
+
+.updateBtn {
+    background: green;
     color: #fff;
     border: none;
     border-radius: 6px;
